argocd/deployment-strategies/blue-green/01-deployment-blue-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue
  namespace: default
  labels:
    app: myapp
    version: v1
    environment: blue
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
      version: v1
      environment: blue
  template:
    metadata:
      labels:
        app: myapp
        version: v1
        environment: blue
    spec:
      containers:
      - name: app
        image: rahees9983/deployment-strategy-app:v1
        ports:
        - containerPort: 8080
          name: http
