argocd/deployment-strategies/blue-green/02-deployment-green-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
  namespace: default
  labels:
    app: myapp
    version: v2
    environment: green
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
      version: v2
      environment: green
  template:
    metadata:
      labels:
        app: myapp
        version: v2
        environment: green
    spec:
      containers:
      - name: app
        image: rahees9983/deployment-strategy-app:v2
        ports:
        - containerPort: 8080
          name: http
