argocd/deployment-strategies/blue-green/04-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-blue
  namespace: default
  labels:
    app: myapp
    environment: blue
spec:
  type: ClusterIP
  selector:
    app: myapp
    environment: blue
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
